@@ -1,4 +1,5 @@
 HEAD
+    + Added 'os' attribute to hosts that defaults to 'linux'
     + Added getimg command line option to trigger the download of an image
     + Renamed command line option from create to createimg
     + Added image-repo conf key to set the place where to download images from
